src/common/components/UpdateBanner.scss
/*
	componentPath: src/common/components/UpdateBanner
	cssComponentId: update-banner_7zu7hd
*/

.update-banner_7zu7hd {
	position: absolute;
	top: 10px;
	left: 50%;
	transform: translateX(-50%);
	padding: 0 10px;
	font-size: 12pt;
	height: 25px;
	line-height: 25px;
	background-color: #FFF599;
	border: 1px solid gold;
	border-radius: 3px;
}

